[gd_scene load_steps=23 format=3 uid="uid://ddbyb28yh3aw7"]

[ext_resource type="Script" path="res://scenes/character.gd" id="1_77vx8"]
[ext_resource type="Texture2D" uid="uid://hrsry5r73qxd" path="res://assets/character/PJModelIdle.png" id="1_heusq"]
[ext_resource type="Texture2D" uid="uid://dmjwnlljmbppn" path="res://assets/character/PJModelGrab.png" id="2_2r2u0"]
[ext_resource type="Texture2D" uid="uid://ceghac51oivec" path="res://assets/character/PJModelWalk.png" id="2_453to"]
[ext_resource type="Texture2D" uid="uid://c4kjhb2hxjniw" path="res://assets/character/PJModelWalkGrab.png" id="5_vluad"]
[ext_resource type="AudioStream" uid="uid://crpx5fda6wlxr" path="res://assets/audio/sfx/pick_item_pop.wav" id="6_rvv75"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t0i55"]
atlas = ExtResource("2_2r2u0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uslgd"]
atlas = ExtResource("1_heusq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_or5qr"]
atlas = ExtResource("1_heusq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wqap"]
atlas = ExtResource("1_heusq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciw5h"]
atlas = ExtResource("1_heusq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80cjf"]
atlas = ExtResource("2_453to")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umpxo"]
atlas = ExtResource("2_453to")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybqxa"]
atlas = ExtResource("2_453to")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgs3k"]
atlas = ExtResource("2_453to")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sihyx"]
atlas = ExtResource("5_vluad")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3ayy"]
atlas = ExtResource("5_vluad")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcv77"]
atlas = ExtResource("5_vluad")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcrub"]
atlas = ExtResource("5_vluad")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7wo5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0i55")
}],
"loop": true,
"name": &"grab",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uslgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or5qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wqap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciw5h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80cjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umpxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybqxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgs3k")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sihyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3ayy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcv77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcrub")
}],
"loop": true,
"name": &"walk_grab",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ujib"]
size = Vector2(14, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eg664"]
size = Vector2(14, 5)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["jugador"]]
collision_mask = 110
script = ExtResource("1_77vx8")

[node name="ManoSprite" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(0, -16)
scale = Vector2(0.5625, 0.5625)

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q7wo5")
animation = &"idle"
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 110
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_1ujib")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_eg664")
metadata/_edit_group_ = true

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rvv75")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
